fix: stuff on the packetsniffer file